[gd_scene load_steps=7 format=3 uid="uid://doovx1f3slpmy"]

[ext_resource type="Script" path="res://scene/Viruses/virus.gd" id="1_fw1ip"]
[ext_resource type="PackedScene" uid="uid://lqsgyvn6ac80" path="res://scene/explosion.tscn" id="2_3u8g3"]
[ext_resource type="Texture2D" uid="uid://cayjyvsxcgv4j" path="res://img/Viruses/Ambre_Virus_trans.png" id="3_iowub"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_mkmiy"]
bounce = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_u4t3f"]
radius = 19.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yrh5d"]
radius = 22.0227

[node name="Virus" type="RigidBody2D"]
collision_layer = 8
collision_mask = 9
physics_material_override = SubResource("PhysicsMaterial_mkmiy")
script = ExtResource("1_fw1ip")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_u4t3f")

[node name="Cell_detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cell_detection"]
shape = SubResource("CircleShape2D_yrh5d")

[node name="Explosion" parent="." instance=ExtResource("2_3u8g3")]

[node name="1s timer" type="Timer" parent="."]
autostart = true

[node name="explosion" type="Timer" parent="."]
one_shot = true

[node name="Cell_atach" type="Timer" parent="."]
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.589844, 0.589844)
texture = ExtResource("3_iowub")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_u4t3f")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Cell_detection" to="." method="_on_cell_detection_body_entered"]
[connection signal="timeout" from="1s timer" to="." method="_on_s_timer_timeout"]
[connection signal="timeout" from="explosion" to="." method="_on_explosion_timeout"]
[connection signal="timeout" from="Cell_atach" to="." method="_on_cell_atach_timeout"]
